--- a/index.html
+++ b/index.html
@@ -1,1 +1,283 @@
-Hi Im princess
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Waner bros</title>
+
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body id="top">
+
+    <header class="header" data-header>
+        <div class="container">
+            <div class="overlay" data-overlay></div>
+            <a href="./index.html" class="logo">
+                <img src="./assets/images/loop.png" alt="Logo" , height="100" width="100">
+            </a>
+            <button class="menu-close-btn" data-menu-close-btn>
+                <ion-icon name="close-outline"></ion-icon>
+            </button>
+        </div>
+
+        <ul class="navbar-list">
+            <li>
+                <a href="./index.html" class="navbar-link">Home</a>
+            </li>
+            <li>
+                <a href="./index.html#tod" class="navbar-link">Tv Shows</a>
+            </li>
+            <li>
+                <a href="./index.html#tmr" class="navbar-link">Movies</a>
+            </li>
+            <li>
+                <a href="./index.html#games" class="navbar-link">Games</a>
+            </li>
+            <li>
+                <a href="./index.html#abt" class="navbar-link">About Us</a>
+            </li>
+            <li>
+                <a href="feedback.html" class="navbar-link">Feedback</a>
+            </li>
+            <li>
+                <a href="location.html" class="navbar-link">Location</a>
+            </li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <section class="hero">
+                <div class="container">
+                    <div class="hero-content">
+                        <h1 class="h1 hero-title">
+                            Warner Bros <strong>Studios</strong> Where the Magic Happens.
+                        </h1>
+                    </div>
+                </div>
+            </section>
+
+            <!-- #UPCOMING -->
+            <section id="tod" class="upcoming">
+                <div class="container">
+                    <div class="flex-wrapper">
+                        <div class="title-wrapper">
+                            <h2 class="h2 section-title"> Tv Shows</h2>
+                        </div>
+                    </div>
+                    <ul class="movies-list  has-scrollbar">
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/Thefr.jpg" alt="The Flash">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">The Flash</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/sha.jpg" alt="Doctor Strange in the Multiverse of Madness movie poster">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Shazam</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/friends.jpg" alt="Friends">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Friends</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/big.jpg" alt="THe Big Bang Theory">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">The Big Bang Theory</h3>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section id="tmr" class="top">
+                <div class="container">
+                    <h2 class="h2 section-title">Coming to Cinemas</h2>
+                    <ul class="movies-list">
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/badam.jpg" alt="Black Adam">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Blak Adam</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/johnwick2.jpg" alt="John Wick">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">John Wick</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/movie-3.png" alt="The Adam Project movie poster">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">The Adam Project</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/movie-4.png" alt="Free Guy movie poster">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Free Guy</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/movie-5.png" alt="The Batman movie poster">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">The Batman</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/ev.jpg" alt="Evil Dead Rise">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Evil Dead Ride</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/themermaid.jpeg" alt="The Little Mermaid">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">The Little Mermaid</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/ted.jpg" alt="Ted Lasso">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Ted Lass</h3>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section id="games" class="upcoming">
+                <div class="container">
+                    <div class="flex-wrapper">
+                        <div class="title-wrapper">
+                            <h2 class="h2 section-title">Games</h2>
+                        </div>
+                    </div>
+                    <ul class="movies-list">
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/The_Mario_Bros.png" alt="Game 1">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">SuperMario</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/mortal.jpg" alt="Game 2" height="30" width="30">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Mortal combat</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/forza.jpg" alt="Game 3">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Forza Horizon</h3>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="movie-card">
+                                <figure class="card-banner">
+                                    <img src="./assets/images/call.jpg" alt="Game 4">
+                                </figure>
+                                <div class="title-wrapper">
+                                    <h3 class="card-title">Call of Duty</h3>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+
+
+
+            <section id="abt" class="service">
+                <div class="container">
+                    <div class="service-banner">
+                        <figure>
+                            <img src="./assets/images/abt.jpg" alt="warner Studios" width="600" height="600">
+                        </figure>
+                    </div>
+                    <div class="service-content">
+                        <p class="service-subtitle">About Us</p>
+                        <h2 class="h2 service-title">What drives us?</h2>
+                        <p class="service-text">
+                            At Warner Bros, we are driven by a passion for storytelling and a commitment to creating exceptional entertainment experiences.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </article>
+    </main>
+</body>
+
+</html>
