--- a/feedback.html
+++ b/feedback.html
@@ -45,39 +45,28 @@
 
         </div>
         <ul class="navbar-list">
-
             <li>
                 <a href="./index.html" class="navbar-link">Home</a>
             </li>
-
             <li>
-                <a href="./index.html#tod" class="navbar-link">New Releases</a>
+                <a href="./index.html#tod" class="navbar-link">Tv Shows</a>
             </li>
-
             <li>
-                <a href="./index.html#tmr" class="navbar-link">COming Soon</a>
+                <a href="./index.html#tmr" class="navbar-link">Movies</a>
             </li>
-
-
+            <li>
+                <a href="./index.html#games" class="navbar-link">Games</a>
+            </li>
             <li>
                 <a href="./index.html#abt" class="navbar-link">About Us</a>
             </li>
-
             <li>
                 <a href="feedback.html" class="navbar-link">Feedback</a>
             </li>
-
             <li>
                 <a href="location.html" class="navbar-link">Location</a>
             </li>
-
         </ul>
-
-        </ul>
-
-
-
-
 
         </div>
     </header>
